refactor： 完成回滚改造